--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "16.15.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
